--- a/README.org
+++ b/README.org
@@ -1,34 +1,25 @@
 * Shadow Tetris
 
-#+begin_comment
+** TODO Make the pile that grows
 
-** Random choice from table
+** TODO Make key bindings configurable
 
-Use ~lume.randomchoice~ to make a random choice from a table.
-
-** Iterating table
+This will require to use something of the form
 
 #+begin_src fennel
-  ;; Iterate a sequential table.
-  (each [_ x (ipairs [1 2 3])]
-    (print x))
-  ;; Iterate a general table.
-  (each [key value (pairs {"key1" 52 "key2" 99})]
-    (print key value))
+{ {:quit-game
+   ["Quit the game."
+   [:q :escape]
+   (lambda [k] (love.event.quit 0))]}
+  {:move
+   ["Move the shadow block."
+   [:down :left :right :a :s :d]
+   (lambda [k] (set last-key k))]}
+}
 #+end_src
-
-** Printing the time passed to the screen
-
-#+begin_src fennel
-  (love.graphics.print
-   (string.format "How many seconds have passed: %.1f." (love.timer.getTime))))
-#+end_src
-
 
 ** TODO Setting unused modules to false is encouraged when you release your game.
 
 Do this in ~conf.lua~
 
 Note that you can't disable ~love.filesystem~ and ~love.data~; it's mandatory. The same goes for the ~love~ module itself. ~love.graphics~ needs ~love.window~ to be enabled. 
-
-#+end_comment
